# myData_Brand_score_scrapping

./: README.md  brand_score.py  crewling_project.ipynb  pyproject.toml
